[package]
name = "better-logihub"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "logihub"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
hidapi = "2"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
